# lira

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: core.rs  html5.rs  lib.rs
tests/: html.rs
